<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:id="@+id/profile_layout"
    tools:context="ProfileActivity">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tvCancel"
            android:clickable="true"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:gravity="bottom|center_horizontal"
            android:paddingBottom="12dp"/>

        <TextView
            android:id="@+id/tvProfile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/tvEditProfile"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:gravity="bottom|center_horizontal"
            android:paddingBottom="12dp"/>

        <TextView
            android:id="@+id/tvDone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tvDone"
            android:clickable="true"
            android:textStyle="bold"
            android:textColor="@color/blueText"
            android:textSize="15sp"
            android:gravity="bottom|center_horizontal"
            android:paddingBottom="12dp"/>

    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d4d2d2"/>

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/avatar"
        android:layout_marginTop="20dp"/>

    <TextView

        android:id="@+id/tvChangeProfilePic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvChangeProfilePic"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:textStyle="bold"
        android:textColor="@color/blueText"
        android:textSize="15sp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:gravity="center"/>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="#d4d2d2"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:hint="@string/tvName"
        android:textColor="#000000"
        android:textColorHint="#a5a3a3"
        android:textSize="16sp"
        android:background="@color/white"
        android:gravity="center_vertical"/>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#d4d2d2"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:hint="@string/tvEmail"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textColorHint="#a5a3a3"
        android:background="@color/white"
        android:gravity="center_vertical"/>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#d4d2d2"/>

    <TextView
        android:id="@+id/tvChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:text="@string/tvChangePassword"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etOldPassword"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/etOldPassword"
        android:textColorHint="#a5a3a3"
        android:textColor="#000000"
        android:textSize="16sp"
        android:background="@color/white"/>

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:background="#d4d2d2"/>

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/etNewPassword"
        android:textColor="#000000"
        android:textColorHint="#a5a3a3"
        android:textSize="16sp"
        android:background="@color/white"/>

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:background="#d4d2d2"/>

    <EditText
        android:id="@+id/etNewPasswordCon"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/etNewPasswordCon"
        android:textColorHint="#a5a3a3"
        android:textColor="#000000"
        android:textSize="16sp"
        android:background="@color/white"/>

    <View
        android:id="@+id/view7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:background="#d4d2d2"/>

</LinearLayout>
