<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheetContainer2"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/bottom_sheet_background2"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/closeBar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/arrow2"
            android:layout_marginTop="15dp"
            android:rotation="90"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tvMetersToShop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/tvMetersToGo"
            android:textColor="@color/white"
            android:textSize="25sp" />


    </LinearLayout>

    <Button
        android:id="@+id/shopButton"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:background="@drawable/mapbuttondesign2"
        android:elevation="0.1dp"
        android:textColor="@color/white"
        android:text="@string/shopButton"/>

    <Button
        android:id="@+id/discountButton"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:background="@drawable/mapbuttondesign2"
        android:elevation="0.1dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"

        android:text="@string/discountButton"/>

    <Button
        android:id="@+id/criticsButton"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:background="@drawable/mapbuttondesign2"
        android:elevation="0.1dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="25dp"
        android:textColor="@color/white"
        android:text="@string/criticsButton"/>

</LinearLayout>